# meta-ops-validator

./: .gitignore  .mcp.json  =0.19.0  =0.21.0  BUSINESS_SPECIFICATION.md  CLAUDE.md  CLAUDE_BUSINESS.md  CLAUDE_TECHNICAL.md  INTEGRATION_VALIDATION_REPORT.md  MVP_API_SPEC.md  MVP_DEMO_SPECIFICATION.md  OPERATIONAL_REQUIREMENTS_SPECIFICATION.md  PRODUCTION_VALIDATION_ARCHITECTURE.md  PROJECT_CONTEXT_FOR_CLAUDE_DESKTOP.md  README.md  TECHNICAL_SPECIFICATION.md  TOOLTIPS_REFERENCE.md  add_realistic_demo_data.py  debug_db.py  fetch_real_book_data.py  fix_date_formats.py  generate_sample_data.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_business_demo.py  test_api.py  test_core_functions.sh  test_repositories.py  test_stage_abc_demo.py  test_ui_reality_check.py  web_server.py
.claude/agents/: biz-model-strategist.md  (+4 more)
.playwright-mcp/: metaops-validation-report.csv
data/: demo.db
diagnostic/: inputs.list.csv  rules.production-ready.yml  rules.sample.yml
docs/: governance_playbook.md
infra/: Makefile
memory-bank/: active-context.md  decision-log.md  product-context.md  progress.md  system-patterns.md
scripts/: format_code.py  generate_test_onix.py
test_onix_files/: basic_namespaced.xml  basic_simple.xml  excellent_namespaced.xml  excellent_simple.xml  good_namespaced.xml  good_simple.xml  minimal_namespaced.xml  minimal_simple.xml  problematic_namespaced.xml  problematic_simple.xml
tests/: test_api.py  test_onix_namespace_detection.py  test_repositories.py  test_rules.py  test_schematron.py  test_ui_usability.py  test_xsd.py
(+77 files in other folders)
