[tool.poetry]
name = "meta-ops-validator"
version = "0.1.0"
description = "Pre-Feed Validator + Ops KPI instrumentation (CLI + GUI)"
authors = ["Ed O'Connell <you@example.com>"]
readme = "README.md"
packages = [{ include = "metaops", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^5.2.2"
typer = "^0.12.3"
jinja2 = "^3.1.4"
pandas = "^2.2.2"
python-dateutil = "^2.9.0"
rich = "^13.7.1"
pyyaml = "^6.0.2"
streamlit = "^1.37.0"

[tool.poetry.scripts]
metaops = "metaops.cli.main:app"